--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,38 @@
+/* fonts */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+/* common styles */
+body{
+    font-family: 'Poppins', sans-serif;
+    background-color: #F3F1FF;
+}
+main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.container{
+    background-color: #FFFFFF;
+    width: 870px;
+    padding: 30px;
+    margin-top: 21px;
+    border-radius: 5px;
+}
+.top-player{
+    margin-bottom: 30px;
+}
+hr{
+    border: 1px solid #D1D1D1;
+    margin-bottom: 27px;
+}
+.title{
+    color: #562EFF;
+    font-size: 24px;
+    margin-top: 3px;
+}
 .players{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    grid-row-gap: 30px;
 }
 .player{
     display: flex;
@@ -9,4 +41,121 @@
 .player img{
     height: 56px;
     width: 56px;
+}
+.player-name{
+    margin-left: 16px;
+    font-size: 18px;
+}
+
+.blogs{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 26px;
+    grid-column-gap: 80px;
+}
+.thumbnail img{
+    width: 177px;
+    height: 117px;
+}
+.blog{
+    display: flex;
+}
+.blog-info{
+    margin-left: 16px;
+}
+.blog-title{
+    font-size: 20px;
+    margin-top: 12px;
+    margin-bottom: 0px;
+}
+.blog-author{
+    font-size: 16px;
+    color: #9f9f9f;
+    margin-top: 5px;
+}
+.blog-author a{
+    text-decoration: none;
+    color: #562EFF;
+    font-size: 16px;
+}
+
+.courses{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 25px;
+}
+.course{
+    width: 253px;
+    height: 270px;
+    box-shadow: 0px 6px 16px rgba(0, 0, 0, 0.05);
+    border-radius: 15px;
+}
+.course-info{
+    display: flex;
+    font-size: 14px;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: -10px;
+}
+.course-banner img{
+    width: 224px;
+    height: 104px;
+    margin-left: 11px;
+    margin-top: 13px;
+}
+.field-star{
+    color: #ffc014;
+}
+.blank-star{
+    color: #aeaeae;
+    opacity: 50%;
+}
+.rate-number{
+    margin-left: -20px;
+}
+.scaling{
+    margin-left: 12.5px;
+}
+.course-title{
+    margin-top: 20px;
+    margin-bottom: 0;
+}
+.course-author{
+    margin-top: 7px;
+    color: #ED6B4F;
+    margin-bottom: 0;
+}
+.duration{
+    width: 75px;
+    height: 30px;
+    border-radius: 15px;
+    background-color: #FFE4E8;
+    color: #FF4A60;
+    margin-right: 12px;
+}
+.duration-time{
+    margin: 4px 5.5px 4px 5.5px;
+}
+.down-scale{
+    margin-bottom: 30px;
+}
+
+@media only screen and (max-width: 688px) {
+    .container{
+        width: 100%;
+    } 
+    .players, .blogs, .courses{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .player{
+        flex-direction: column;
+    }
+}
+@media only screen and (min-width: 689px) and (max-width:992px) {
+    .container{
+        width: 100%;
+    }
+    .players, .blogs, .courses{
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
