--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,42 @@
 body{
     font-family: 'Poppins', sans-serif;
     background-color: #F3F1FF;
+    margin: 0;
+}
+.head-bar{
+    width: 100%;
+    height: 94px;
+    background-color: #562EFF;
+    display: flex;
+    justify-content: space-between;
+}
+.left{
+    display: flex;
+    margin-left: 215px;
+}
+.right{
+    display: flex;
+    align-items: center;
+    margin-right: 215px;
+}
+.logo img{
+    width: 40.42px;
+    height: 51px;
+    margin-top: 26px;
+
+}
+.logo-title{
+    font-size: 24px;
+    margin-top: 8px;
+    margin-left: 16px;
+    color: white;
+}
+.nav-topic a{
+    text-decoration: none;
+    font-size: 16px;
+    margin-right: 36px;
+    color: white;
+    font-weight: 400px;
 }
 main{
     display: flex;
