--- a/styles/style.css
+++ b/styles/style.css
@@ -177,18 +177,18 @@ hr{
 }
 
 @media only screen and (max-width: 688px) {
-    .container{
+    .container, .head-bar{
         width: 100%;
     } 
     .players, .blogs, .courses{
         grid-template-columns: repeat(1, 1fr);
     }
-    .player{
+    .player, .left, .right{
         flex-direction: column;
     }
 }
 @media only screen and (min-width: 689px) and (max-width:992px) {
-    .container{
+    .container, .head-bar{
         width: 100%;
     }
     .players, .blogs, .courses{
