--- a/styles/style.css
+++ b/styles/style.css
@@ -67,6 +67,7 @@ hr{
 }
 .players{
     display: grid;
+    grid-gap: 10px;
     grid-template-columns: repeat(3, 1fr);
     grid-row-gap: 30px;
 }
@@ -174,6 +175,16 @@ hr{
 }
 .down-scale{
     margin-bottom: 30px;
+}
+.ul-container{
+    margin-left: 215px;
+    display: flex;
+}
+.button{
+    margin-top: 10px;
+    margin-bottom: 20px;
+    padding: 5px 12px;
+    border-radius: 5px;
 }
 
 @media only screen and (max-width: 688px) {
